# harf-bisim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: external_packages.cmake
data/: CMakeLists.txt
data/resources/: qml.qrc
data/translations/: fa_IR.ts
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  device.cpp  device.h  mic.cpp  mic.h  speaker.cpp  speaker.h
src/client/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  Main.qml  qml.qrc
src/gui/pages/: FirstPage.qml  SecondPage.qml
src/gui/wrappers/: qbackend.cpp  qbackend.h
src/net/: CMakeLists.txt  client.cpp  client.h  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  packet.cpp  packet.h  server.cpp  server.h
src/server/: CMakeLists.txt  main.cpp
